--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,19 +1,27 @@
-name: geoescopio
-description: "A new Flutter project."
-publish_to: 'none'
-version: 0.1.0
+name: namer_app
+description: A new Flutter project.
+
+publish_to: 'none' # Remove this line if you wish to publish to pub.dev
+
+version: 0.0.1+1
 
 environment:
-  sdk: '>=3.4.3 <4.0.0'
+  sdk: '>=2.19.4 <4.0.0'
 
 dependencies:
   flutter:
     sdk: flutter
+    
+  sidebarx: ^0.2.1
+
+  english_words: ^4.0.0
+  provider: ^6.0.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^3.0.0
+
+  flutter_lints: ^2.0.0
 
 flutter:
   uses-material-design: true
