--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ flutter:
   #  - images/a_dot_ham.jpeg
   assets:
     - assets/img/bgprueba.jpg
+    - assets/img/pluriverso.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.io/assets-and-images/.
