--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,6 +9,7 @@ dependencies:
     sdk: flutter
   sidebarx: ^0.17.1
   url_launcher: ^6.0.12 
+  concentric_transition: ^1.0.3
 
 dev_dependencies:
   flutter_test:
