--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,6 +10,7 @@ dependencies:
   sidebarx: ^0.17.1
   url_launcher: ^6.0.12 
   concentric_transition: ^1.0.3
+  video_player: ^2.9.1
 
 dev_dependencies:
   flutter_test:
@@ -42,6 +43,10 @@ flutter:
     - assets/img/pablo.jpg
     - assets/img/mapasatelital.jpg
     - assets/img/eye1.png
+    - assets/img/ministerio.png
+    - assets/img/logopluriversos.png
+    - assets/img/concursoanillos.jpg
+    - assets/img/concursoanillos.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.io/assets-and-images/.
