--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,7 @@ dependencies:
   url_launcher: ^6.0.12 
   concentric_transition: ^1.0.3
   video_player: ^2.9.1
+  youtube_player_flutter: ^9.0.1
 
 dev_dependencies:
   flutter_test:
