--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,12 +11,17 @@ dependencies:
   url_launcher: ^6.0.12 
   concentric_transition: ^1.0.3
   video_player: ^2.9.1
+  flutter_launcher_icons: ^0.13.1
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^4.0.0
 
+
+flutter_icons:
+  android: "launcher_icon"
+  image_path: "assets/img/pluriverso2.png"
 
 # For information on the generic Dart part of this file, see the
 # following page: https://www.dartlang.org/tools/pub/pubspec
@@ -46,6 +51,7 @@ flutter:
     - assets/img/ministerio.png
     - assets/img/logopluriversos.png
     - assets/img/concursoanillos.jpg
+    - assets/img/pluriverso2.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.io/assets-and-images/.
