--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -57,6 +57,8 @@ flutter:
     - assets/img/futuros-climaticos.png
     - assets/img/iniciativas_regenerativas.png
     - assets/img/pequeñas_manos_pequeñas_lombrices.png
+    - assets/img/caminocurvas.png
+    - assets/img/exploracionsonora.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.io/assets-and-images/.
