Se modifican el area del survey

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -60,6 +60,7 @@ flutter:
     - assets/img/caminocurvas.png
     - assets/img/exploracionsonora.png
     - assets/img/maximiliano.jpg
+    - assets/img/ojoreal.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.io/assets-and-images/.
