--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -61,6 +61,7 @@ flutter:
     - assets/img/exploracionsonora.png
     - assets/img/maximiliano.jpg
     - assets/img/ojoreal.png
+    - assets/img/iconomapa.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.io/assets-and-images/.
