--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,7 @@ dev_dependencies:
 
 flutter_icons:
   android: "launcher_icon"
+  ios: true
   image_path: "assets/img/pluriverso2.png"
 
 # For information on the generic Dart part of this file, see the
