--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -64,6 +64,9 @@ flutter:
     - assets/img/iconomapa.png
     - assets/img/matias.png
     - assets/img/mati.jpg
+    - assets/img/sabiduria aymara.png
+
+
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.io/assets-and-images/.
 
