Se agrega visor

--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -1,6 +1,7 @@
 analyzer:
   errors:
     non_constant_identifier_names: ignore
+    avoid_web_libraries_in_flutter: ignore
 include: package:flutter_lints/flutter.yaml
 
 linter:
